[package]
name = "saito-core"
version = "0.1.0"
authors = ["Team Saito <dreambigger@saito.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
hashbrown = "^0.5.0"
bincode = "1.1.4"
rayon = "1.1.0"
sha2 = "0.8"
digest = '0.8'
rand = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
secp256k1 = { version = '0.12.2', features = ["rand", "serde"] }
base58 = '0.1.0'
merkle = '1.10.0'
ring = "^0.13.0"
byteorder = '1.3.1'


[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "saito_benchmark"
harness = false


