[package]
name = "saito_primitives"
version = "0.1.0"
authors = ["BearGuy <stephen@peterkins.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.8"
digest = '0.8'
rand = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0.0"
serde_bytes = "0.11"
secp256k1 = { version = '0.12.2', features = ["rand", "serde"] }
base58 = '0.1.0'
merkle = '1.10.0'
bincode = "1.1.4"
ring = "^0.13.0"
data-encoding = '2.1.2'
